# screenshot-declutterer

./: .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml
static/: app.js  style.css
templates/: index.html
tests/: test_app.py
